--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ img {
 }
 
 .header__container {
-  max-width: 1392px;
+  max-width: 1352px;
   backdrop-filter: blur(60px);
   background: rgba(108, 185, 171, 0.7);
   padding: 12px 46px;
@@ -86,6 +86,10 @@ img {
   background-repeat: no-repeat;
   text-align: center;
   padding: 10px 4px 3px;
+}
+
+.burger__nav {
+  display: none;
 }
 
 .promo {
@@ -138,6 +142,7 @@ img {
   font-size: 0;
   background: #f2f9f7;
   min-height: 600px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   color: #1d1c1d;
@@ -207,4 +212,221 @@ img {
   gap: 12px;
   align-items: center;
   padding: 16px 0 0;
+}
+
+@media (max-width: 1240px) {
+  .container {
+    padding: 0 42px;
+  }
+
+  .header {
+    padding: 0 20px;
+    top: 20px;
+  }
+  
+  .header__container {
+    padding: 12px 22px;
+  }
+  
+  .promo__container {
+    padding-top: 172px;
+    padding-bottom: 60px;
+    background-image: url("../public/image/promo1024.png");
+    background-position: right 48px bottom 0;
+  }
+  
+  .promo__title {
+    font-size: 70px;
+    margin-bottom: 40px;
+    max-width: 620px;
+  }
+  
+  .promo__link {
+    display: inline-block;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    padding: 16px 24px;
+  }
+  
+  .product {
+    min-height: 450px;
+  }
+  
+  .footer__menu {
+    gap: 32px;
+  }
+}
+
+@media (max-width: 940px) {
+  .header__logo {
+    width: 78px;
+  }
+
+  .header__menu {
+    gap: 24px;
+  }
+
+  .header__menu-link {
+    font-size: 16px;
+  }
+
+  .promo__container {
+    padding-top: 157px;
+    background-size: 203px;
+    background-position: right bottom;
+  }
+
+  .promo__title {
+    font-size: 54px;
+    max-width: 454px;
+  }
+
+  .promo__link {
+    padding: 12px 18px;
+    font-size: 16px;
+  }
+
+  .products {
+    padding: 80px 0;
+  }
+
+  .product__title {
+    font-size: 36px;
+    margin-bottom: 24px;
+  }
+
+  .products__list {
+    grid-template-columns: repeat(auto-fill, minmax(217px, 1fr));
+    gap: 16px;
+  }
+
+  .product {
+    min-height: 360px;
+  }
+
+  .product__title {
+    font-size: 20px;
+  }
+
+  .product__price {
+    font-size: 16px;
+  }
+
+  .footer {
+    padding: 40px 0;
+  }
+
+  .footer__menu {
+    gap: 24px;
+    font-size: 16px;
+  }
+  
+  .footer__menu-link {
+    font-size: 16px;
+  }
+
+  .footer__info {
+    font-size: 12px;
+  }
+
+  .footer__social {
+    padding-top: 12px;
+  }
+}
+
+@media (max-width: 740px) {
+  .promo__title {
+    font-size: 40px;
+    max-width: 280px;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: 0 16px;
+  }
+  
+  .header {
+    padding: 0;
+    top: 8px;
+  }
+
+  .header__nav {
+    display: none;
+  }
+
+  .header__cart-link {
+    position: absolute;
+    right: 72px;
+  }
+
+  .burger__nav {
+    display: block;
+    width: 28px;
+    height: 28px;
+    cursor: pointer;
+  }
+  
+  .promo__container {
+    padding-top: 89px;
+    padding-bottom: 250px;
+    background-size: 145px;
+    background-position: bottom;
+  }
+  
+  .promo__title {
+    margin-bottom: 24px;
+  }
+
+  .products__list {
+    grid-template-columns: repeat(2, minmax(140px, 1fr));
+    gap: 8px;
+  }
+
+  .product {
+    max-height: 360px;
+  }
+
+  .product__title {
+    font-size: 16px;
+  }
+
+  .product__image {
+    min-height: 226px;
+  }
+
+  .product__content {
+    padding: 16px 8px;
+  }
+
+  .products {
+    padding: 60px 0;
+  }
+
+  .footer__container {
+    gap: 40px;
+    grid-template-columns: repeat(1, max-content);
+    justify-content: space-between;
+  }
+
+  .footer__logo-link {
+    order: 1;
+  }
+
+  .footer__nav {
+    order: 2;
+  }
+
+  .footer__contacts {
+    order: 3 ;
+  }
+
+  .footer__info {
+    order: 4;
+  }
+
+  .footer__menu {
+    flex-direction: column;
+    gap: 16px;
+  }
 }
