--- a/src/index.css
+++ b/src/index.css
@@ -347,8 +347,13 @@ img {
   }
   
   .header {
-    padding: 0;
-    top: 8px;
+    padding: 8px;
+    top: 0;
+  }
+
+  .header__container {
+    padding: 8px 16px;
+    gap: 16px;
   }
 
   .header__nav {
@@ -406,7 +411,6 @@ img {
   .footer__container {
     gap: 40px;
     grid-template-columns: repeat(1, max-content);
-    justify-content: space-between;
   }
 
   .footer__logo-link {
