--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,12 @@ img {
   height: auto;
 }
 
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
@@ -213,6 +219,197 @@ img {
   align-items: center;
   padding: 16px 0 0;
 }
+
+.cart {
+  padding: 215px 0 50px;
+}
+
+.cart__container {
+  display: grid;
+  align-items: start;
+  grid-template-columns: 2fr 1fr;
+  gap: 32px 20px;
+}
+
+.cart__title {
+  margin: 0;
+  grid-column: 1 / -1;
+  font-size: 54px;
+  line-height: 1.1;
+  color: #64099b;
+  font-weight: 400;
+}
+
+.cart-item {
+  font-size: 0;
+  background-color: #f2f9f7;
+}
+
+.cart__items {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.cart-item__image {
+  width: 100%;
+}
+
+.cart-item__info {
+  padding: 16px;
+}
+
+.cart-item__title {
+  font-weight: 400;
+  font-size: 20px;
+  color: #1d1c1d;
+  margin-bottom: 8px;
+}
+
+.cart-item__quantity {
+  display: flex;
+  gap: 4px ;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.cart-item__quantity-button_minus {
+  background-image: url("/public/image/minus.svg");
+}
+
+.cart-item__quantity-button {
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #b8b8b8;
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.cart-item__quantity-button_plus {
+  background-image: url("/public/image/plus.svg");
+}
+
+.cart-item__quantity-input {
+  width: 26px;
+  font-size: 20px;
+  text-align: center;
+  background-color: transparent;
+  outline: none;
+  border: none;
+}
+
+.cart-item__price {
+  font-size: 20px;
+}
+
+.cart__summary {
+  display: grid;
+  grid-template-areas: 
+  "title button"
+  "total button";
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+  padding: 24px;
+  background-color: #f2f9f7;
+  color: #1d1c1d;
+}
+
+.cart__summary-title {
+  grid-area: title;
+  margin: 0;
+  font-weight: 400;
+  font-size: 20px;
+  color: #1d1c1d;
+}
+
+.cart__total {
+  grid-area: total;
+  font-size: 20px;
+  color: #1d1c1d;
+}
+
+.cart__order-button {
+  grid-area: button;
+  font-size: 20px;
+  color: #64099b;
+  border: 1px solid #64099b;
+  border-radius: 4px;
+  padding: 16px 24px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.order {
+  padding: 50px 0 100px;
+}
+
+.order__title {
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 1.1;
+  color: #64099b;
+  margin-bottom: 32px;
+}
+
+.order__form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  max-width: 640px;
+}
+
+.order__input {
+  border-radius: 4px;
+  padding: 16px;
+  background-color: #f2f9f7;
+  font-size: 16px;
+  line-height: 1.24;
+  border: none;
+}
+
+.order__input::placeholder {
+  color: #b8b8b8;
+}
+
+.order__input_address {
+  grid-column: 1 / -1;
+}
+
+.order__payment {
+  padding: 12px 0 0;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.order__payment-title {
+  display: block;
+  margin: 0;
+  font-weight: 400;
+  font-size: 20px;
+  margin-bottom: 12px;
+}
+
+.order__payment-label {
+  display: block;
+  font-size: 16px;
+  color: #1d1c1d;
+  margin-bottom: 8px;
+}
+
+.order__payment-label:last-child {
+  margin-bottom: 0;
+}
+
+.order__radio {
+  margin-right: 8px;
+}
+
+
 
 @media (max-width: 1240px) {
   .container {
@@ -434,3 +631,6 @@ img {
     gap: 16px;
   }
 }
+
+
+
