--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,10 @@ input[type="number"]::-webkit-outer-spin-button {
   gap: 50px;
 }
 
+.header__menu-link.active {
+  color: #64099b;
+}
+
 .header__cart-link {
   width: 28px;
   height: 28px;
