--- a/src/index.css
+++ b/src/index.css
@@ -421,6 +421,11 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-right: 8px;
 }
 
+.skeleton-wrapper {
+  width: 100%;
+  height: 600px;
+}
+
 @media (max-width: 1240px) {
   .container {
     padding: 0 42px;
@@ -486,6 +491,10 @@ input[type="number"]::-webkit-outer-spin-button {
   .order__form {
     max-width: 620px;
   }
+}
+
+.skeleton-wrapper {
+  height: 450px;
 }
 
 @media (max-width: 940px) {
@@ -654,6 +663,9 @@ input[type="number"]::-webkit-outer-spin-button {
     padding-top: 8px;
   }
 
+  .skeleton-wrapper {
+    height: 360px;
+  }
 }
 
 @media (max-width: 740px) {
